React-WordPress/scss/modules/_header.scss
/* ... */
.header--mobile-product {
    .header__back {
        vertical-align: middle;
        text-align: left;

        strong {
            font-size: 18px;
            vertical-align: middle;
        }

        i {
            vertical-align: middle;
            margin-right: 0.5em;
            font-size: 24px;
            color: $color-heading;
        }
    }

    .navigation--mobile {
        .navigation__left {
            justify-content: flex-start;
        }
    }
}

.header--mobile-categories {
    .header__back {
        vertical-align: middle;
        text-align: left;

        strong {
            font-size: 18px;
            vertical-align: middle;
        }

        i {
            vertical-align: middle;
            margin-right: 16px;
            font-size: 24px;
            color: $color-heading;
        }
    }

    .navigation--mobile {
        .navigation__left {
            justify-content: flex-start;
        }
    }

    .header__filter {
        padding: 10px 15px;
        display: flex;
        justify-content: space-between;
        align-items: center;
        background-color: #f5f5f5;

        > * {
            flex-basis: 100%;
            max-width: 50%;
        }

        button {
            border: none;
            display: flex;
            align-items: center;
            justify-content: center;
            height: 30px;
            background-color: transparent;
            font-size: 14px;

            &:after {
                content: '\e93a';
                font-family: Linearicons;
                margin-left: 20px;
            }

            i {
                margin-right: 10px;
                font-size: 16px;
                font-size: 20px;
                color: $color-text;
            }
        }

        .header__sort {
            display: flex;
            justify-content: space-between;
            align-items: center;
            padding: 0 10px;

            i {
                margin-right: 10px;
                font-size: 16px;
                font-size: 20px;
                color: $color-text;
            }

            .select2 {
                .select2-selection {
                    border: none;
                    background-color: transparent;

                    .select2-selection__rendered {
                        background-color: transparent;
                        text-align: left;
                    }

                    .select2-selection__arrow {
                        &:before {
                            content: '\e93a';
                            font-family: Linearicons;
                        }
                    }
                }
            }
        }

        > button {
            border-right: 1px solid #ccc;
        }
    }
}
.header-top{
    margin:1em auto;
    max-width: 1280px;
    height:  22px;
    
}
.custom--navigation{
    display: block;
    width: 100%;
    padding:0.8em 2.2em;
    .nav--list{
        display: flex;
        height: 50px;
        align-items: center;
        li{
            .shop{
                font-size: 16px;
            }
            > *{
                color: #000000;
                line-height: 20px;
                font-weight: 400;
                font-size: 14px;
                &:hover{
                    color:#0309A5;
                }
            }
            margin:auto 0.4em ;
        }
    }
    .nav--center{
       margin:auto;
       text-align: center;
       justify-content: space-between;
       li{
           margin: auto 0.5em;
       }
    }
    .nav--right{
     margin-left: auto;
    }
}
.font-20{
    font-size: 20px;
    font-weight: 600;
}
.search-mobile{
   .search-header-form{
       height: 80px;
   }
    width: 85%;
    margin: 1em auto;
    @include media('<sm'){
        width: 96%;
    }
}
.header-mobile-top{
    display:flex;
    align-items:center;
    padding:1em;
    border: none;
    justify-content: space-between;
    .header-mobile-actions{
        display: flex;
        align-items: center;
        .action-links{
            margin-right: 0.6em;
            .sub{
                position: relative;
                top: 4px;
                left: -10px;
                background-color: white;
                border-radius: 50%;
                font-size: 12px;
                font-weight: 600;
                color:#2A3147;
                display: inline-block;
                height: 20px;
                width: 20px;
            }
          
        }
        i{
            font-size: 22px;
        }
        @include media('<md'){
            .action-links{
                margin-right: 0.3em;
            }
            i{
                font-size: 20px;
            }
        }
        @include media('<sm'){
            .action-links{
                margin-right: 0.1em;
            }
            i{
                font-size: 18px;
            }
        }
    }
    
}

.ps__logo-mobile{
    display: inline-block;
    width: 80px;
    height: 20px;
    margin-left: 20px;
    img{
        width: 100%;
    }
    @include media('<sm'){
        margin-left: 2px;
    }
}

